--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style/main.css">
-  <link rel="stylesheet" href="style/responsivo.css">
+  <link rel="stylesheet" href="style/responsive.css">
 
   <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
   <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
@@ -50,12 +50,12 @@
 
   <div class="carrossel-filmes">
     <div class="owl-carousel owl-theme">
-      <div class="item"><img class="box-filme" src="img/mini 1.jpg" alt="Dororo"></div>
-      <div class="item"><img class="box-filme" src="img/mini 2.jpg" alt="Brooklyn 99"></div>
-      <div class="item"><img class="box-filme" src="img/mini 3.jpg" alt="Death Note"></div>
-      <div class="item"><img class="box-filme" src="img/mini 4.jpg" alt="Doutor Estranho"></div>
-      <div class="item"><img class="box-filme" src="img/mini 5.jpg" alt="The Office"></div>
-      <div class="item"><img class="box-filme" src="img/mini 6.jpg" alt="Guardiões da Galáxia"></div>
+      <div class="item"><img class="box-filme" src="img/mini1.jpg" alt="Dororo"></div>
+      <div class="item"><img class="box-filme" src="img/mini2.jpg" alt="Brooklyn 99"></div>
+      <div class="item"><img class="box-filme" src="img/mini3.jpg" alt="Death Note"></div>
+      <div class="item"><img class="box-filme" src="img/mini4.jpg" alt="Doutor Estranho"></div>
+      <div class="item"><img class="box-filme" src="img/mini5.jpg" alt="The Office"></div>
+      <div class="item"><img class="box-filme" src="img/mini6.jpg" alt="Guardiões da Galáxia"></div>
     </div>
   </div>
 
